[gd_scene load_steps=2 format=3 uid="uid://bnbmq1s2aaa6q"]

[ext_resource type="Script" path="res://Scripts/Main Menu.gd" id="1_yghro"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yghro")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -284.0
offset_top = -185.0
offset_right = 283.0
offset_bottom = 184.0
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Control" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Control"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Control" to="." method="_on_control_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
